--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,77 +4,55 @@
     <meta charset="UTF-8">
     <title>spring-boot-websocket</title>
 </head>
-<body onload="disconnect()">
-<noscript><h2 style="color: #ff0000">貌似你的浏览器不支持websocket</h2></noscript>
-<div>
-    <div>
-        <button id="connect" onclick="connect();">连接</button>
-        <button id="disconnect" disabled="disabled" onclick="disconnect();">断开连接</button>
-    </div>
-    <div id="conversationDiv">
-        <label>输入你的名字</label><input type="text" id="name" />
-        <button id="sendName" onclick="sendName();">发送</button>
-        <p id="response"></p>
-        <p id="response1"></p>
-    </div>
-</div>
+<body>
+    <input id="text" type="text"/>
+    <button onclick="send()">发送消息</button>
+    <hr/>
+    <button onclick="closeWebSocket()">关闭WebSockeet连接</button>
+    <hr/>
+    <div id="message"></div>
 
-<script src="https://cdn.bootcss.com/sockjs-client/1.1.4/sockjs.min.js"></script>
-<script src="https://cdn.bootcss.com/stomp.js/2.3.3/stomp.min.js"></script>
-<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
-<script th:inline="javascript">
-    var stompClient = null;
-    //此值有服务端传递给前端,实现方式没有要求
-    var userId = [[${userId}]];
-
-    function setConnected(connected) {
-        document.getElementById('connect').disabled = connected;
-        document.getElementById('disconnect').disabled = !connected;
-        document.getElementById('conversationDiv').style.visibility = connected ? 'visible' : 'hidden';
-        $('#response').html();
-    }
-
-    function connect() {
-        var socket = new SockJS('/endpointWisely'); //1连接SockJS的endpoint是“endpointWisely”，与后台代码中注册的endpoint要一样。
-        stompClient = Stomp.over(socket);//2创建STOMP协议的webSocket客户端。
-        stompClient.connect({}, function(frame) {//3连接webSocket的服务端。
-            setConnected(true);
-            console.log('开始进行连接Connected: ' + frame);
-            //4通过stompClient.subscribe（）订阅服务器的目标是'/topic/getResponse'发送过来的地址，与@SendTo中的地址对应。
-            stompClient.subscribe('/topic/getResponse', function(respnose){
-                showResponse(JSON.parse(respnose.body).responseMessage);
-            });
-            //4通过stompClient.subscribe（）订阅服务器的目标是'/user/' + userId + '/msg'接收一对一的推送消息,其中userId由服务端传递过来,用于表示唯一的用户,通过此值将消息精确推送给一个用户
-            stompClient.subscribe('/user/' + userId + '/msg', function(respnose){
-                console.log(respnose);
-                showResponse1(JSON.parse(respnose.body).responseMessage);
-            });
-        });
-    }
-
-
-    function disconnect() {
-        if (stompClient != null) {
-            stompClient.disconnect();
+    <script th:inline="javascript">
+        var  webSocket=null;
+        //判断当前浏览器是否支持WebSocket
+        if ('WebSocket' in window) {
+            webSocket = new WebSocket('ws://localhost:8086/webSocket/330000000000');
+        } else {
+            alert("当前浏览器不支持WebSocket");
         }
-        setConnected(false);
-        console.log("Disconnected");
-    }
+        //连接发生错误的回调方法
+        webSocket.onerror=function () {
+            setMessageInnerHTML("WebSocket连接发生错误！");
+        }
+        webSocket.onopen=function () {
+            setMessageInnerHTML("WebSocket连接成功！")
+        }
 
-    function sendName() {
-        var name = $('#name').val();
-        //通过stompClient.send（）向地址为"/welcome"的服务器地址发起请求，与@MessageMapping里的地址对应。因为我们配置了registry.setApplicationDestinationPrefixes(Constant.WEBSOCKETPATHPERFIX);所以需要增加前缀/ws-push/
-        stompClient.send("/ws-push/welcome", {}, JSON.stringify({ 'name': name }));
-    }
+        webSocket.onmessage=function (event) {
+            setMessageInnerHTML(event.data);
+        }
 
-    function showResponse(message) {
-        var response = $("#response");
-        response.html(message);
-    }
-    function showResponse1(message) {
-        var response = $("#response1");
-        response.html(message);
-    }
-</script>
+        webSocket.onclose=function () {
+            setMessageInnerHTML("WebSocket连接关闭");
+        }
+
+        window.onbeforeunload=function () {
+            closeWebSocket();
+        }
+
+        function closeWebSocket() {
+            webSocket.close();
+        }
+
+        function send() {
+            var message=document.getElementById('text').value;
+            webSocket.send(message);
+        }
+
+        //将消息显示在网页上
+        function setMessageInnerHTML(innerHTML) {
+            document.getElementById('message').innerHTML+=innerHTML+'<br/>';
+        }
+    </script>
 </body>
 </html>
